--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
+    "nsp": "^2.6.2",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
     "postcss-loader": "1.0.0",
@@ -51,6 +52,8 @@
     "react-dom": "^15.4.1"
   },
   "scripts": {
+    "audit": "nsp check package",
+    "coverage": "npm run test -- --coverage && cat coverage/lcov.info | coveralls && rm -rf ./coverage",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
@@ -59,6 +62,7 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}"
     ],
+    "coverageDirectory": "./coverage",
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
