--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "devDependencies": {
     "autoprefixer": "6.5.1",
-    "babel-core": "6.17.0",
+    "babel-core": "^6.21.0",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.7",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-react-app": "^2.0.1",
+    "babel-preset-stage-0": "^6.16.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "connect-history-api-fallback": "1.3.0",
     "coveralls": "^2.11.15",
     "cross-spawn": "4.0.2",
-    "css-loader": "0.26.0",
+    "css-loader": "^0.26.1",
     "detect-port": "1.0.1",
     "dotenv": "2.0.0",
     "eslint": "3.8.1",
@@ -33,6 +36,7 @@
     "http-proxy-middleware": "0.17.2",
     "jest": "17.0.2",
     "json-loader": "0.5.4",
+    "node-sass": "^4.1.1",
     "nsp": "^2.6.2",
     "object-assign": "4.1.0",
     "path-exists": "2.1.0",
@@ -40,8 +44,10 @@
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "2.1.0",
+    "sass-loader": "^4.1.1",
+    "script-loader": "^0.7.0",
     "strip-ansi": "3.0.1",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.1",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
