--- a/package.json
+++ b/package.json
@@ -3,56 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "autoprefixer": "6.5.1",
+    "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
-    "babel-eslint": "7.1.1",
-    "babel-jest": "17.0.2",
+    "babel-eslint": "^7.1.1",
+    "babel-jest": "^18.0.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-app": "^2.0.1",
     "babel-preset-stage-0": "^6.16.0",
-    "case-sensitive-paths-webpack-plugin": "1.1.4",
-    "chalk": "1.1.3",
-    "connect-history-api-fallback": "1.3.0",
+    "case-sensitive-paths-webpack-plugin": "^1.1.4",
+    "chalk": "^1.1.3",
+    "connect-history-api-fallback": "^1.3.0",
     "coveralls": "^2.11.15",
-    "cross-spawn": "4.0.2",
+    "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
-    "detect-port": "1.0.1",
-    "dotenv": "2.0.0",
-    "eslint": "3.8.1",
+    "detect-port": "^1.0.7",
+    "dotenv": "^2.0.0",
+    "eslint": "^3.12.2",
     "eslint-config-react-app": "^0.5.0",
-    "eslint-loader": "1.6.0",
-    "eslint-plugin-flowtype": "2.21.0",
-    "eslint-plugin-import": "2.0.1",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "filesize": "3.3.0",
-    "fs-extra": "0.30.0",
-    "gzip-size": "3.0.0",
-    "html-webpack-plugin": "2.24.0",
-    "http-proxy-middleware": "0.17.2",
-    "jest": "17.0.2",
-    "json-loader": "0.5.4",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-flowtype": "^2.29.2",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "filesize": "^3.3.0",
+    "fs-extra": "^1.0.0",
+    "gzip-size": "^3.0.0",
+    "html-webpack-plugin": "^2.26.0",
+    "http-proxy-middleware": "^0.17.3",
+    "jest": "^18.1.0",
+    "json-loader": "^0.5.4",
     "node-sass": "^4.1.1",
     "nsp": "^2.6.2",
-    "object-assign": "4.1.0",
-    "path-exists": "2.1.0",
-    "postcss-loader": "1.0.0",
-    "promise": "7.1.1",
+    "object-assign": "^4.1.0",
+    "path-exists": "^3.0.0",
+    "postcss-loader": "^1.2.1",
+    "promise": "^7.1.1",
     "react-dev-utils": "^0.4.2",
-    "recursive-readdir": "2.1.0",
+    "recursive-readdir": "^2.1.0",
     "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
-    "strip-ansi": "3.0.1",
+    "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.16.2",
-    "webpack-manifest-plugin": "1.1.0",
-    "whatwg-fetch": "1.0.0"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-manifest-plugin": "^1.1.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "dependencies": {
     "react": "^15.4.1",
