--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "coverage": "yarn test -- --coverage && cat coverage/lcov.info | coveralls && rm -rf ./coverage",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/texst.js --env=jsdom"
   },
   "jest": {
     "collectCoverageFrom": [
