--- a/.eslintrc
+++ b/.eslintrc
@@ -441,7 +441,10 @@
     ],
     "indent": [
       2,
-      2
+      2,
+      {
+        "SwitchCase": 1
+      }
     ],
     "jsx-quotes": [
       2,
