--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "coveralls": "^2.11.15",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
+    "deep-freeze-strict": "^1.1.1",
     "deepmerge": "^1.3.1",
     "detect-port": "^1.0.7",
     "dotenv": "^2.0.0",
@@ -28,6 +29,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.8.0",
+    "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "filesize": "^3.3.0",
@@ -37,6 +39,7 @@
     "html-webpack-plugin": "^2.26.0",
     "http-proxy-middleware": "^0.17.3",
     "jest": "^18.1.0",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
     "node-sass": "^4.1.1",
     "nsp": "^2.6.2",
@@ -44,8 +47,10 @@
     "path-exists": "^3.0.0",
     "postcss-loader": "^1.2.1",
     "promise": "^7.1.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-dev-utils": "^0.4.2",
     "recursive-readdir": "^2.1.0",
+    "redux-mock-store": "^1.2.1",
     "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
     "strip-ansi": "^3.0.1",
