--- a/package.json
+++ b/package.json
@@ -102,7 +102,12 @@
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
-    }
+    },
+    "modulePaths": [
+      "src/actions",
+      "src/reducers",
+      "src/store"
+    ]
   },
   "babel": {
     "presets": [
