--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jest": "^18.1.0",
     "jquery": "^3.1.1",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.4.0",
+    "node-sass": "3.4.0",
     "nsp": "^2.6.2",
     "object-assign": "^4.1.0",
     "path-exists": "^3.0.0",
