--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "whatwg-fetch": "^2.0.1"
   },
   "dependencies": {
+    "babel-preset-react-optimize": "^1.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
