--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "web-react",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ChinaCompare/web-react"
+  },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
     "babel-core": "^6.21.0",
