--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-redux-multilingual": "^1.0.2",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0"
   },
   "scripts": {
