--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ cache:
   directories:
     - node_modules
 script:
-  - node node_modules/node-sass/scripts/install.js
-  - npm rebuild node-sass
+  - yarn fixsass
   - yarn validate
   - yarn coverage
   - yarn build
