--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "filesize": "^3.3.0",
     "find": "^0.2.7",
     "fs-extra": "^1.0.0",
+    "gulp-cli": "^1.2.2",
     "gzip-size": "^3.0.0",
     "html-webpack-plugin": "^2.26.0",
     "http-proxy-middleware": "^0.17.3",
